--- a/shippable.yml
+++ b/shippable.yml
@@ -12,7 +12,7 @@ build:
     - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
     - echo "deb http://download.mono-project.com/repo/ubuntu stable-xenial main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
     - apt-get update
-    - apt-get install mono-complete
+    - apt-get install mono-complete nunit-console
     - wget https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
     - mono nuget.exe install -OutputDirectory packages
     - msbuild falkonry-csharp-client.sln
