updating nunit-console version

--- a/falkonry-csharp-client/falkonry-csharp-client.csproj
+++ b/falkonry-csharp-client/falkonry-csharp-client.csproj
@@ -120,6 +120,9 @@
     <Folder Include="Tests\" />
     <Folder Include="resources\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\addData.json" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
 </Project>
