disabling slack notification

--- a/shippable.yml
+++ b/shippable.yml
@@ -19,13 +19,13 @@ build:
     - mono nuget.exe install -OutputDirectory packages
     - msbuild falkonry-csharp-client.sln
     - mono nunit3-console.exe falkonry-csharp-client/bin/Debug/falkonry-csharp-client.dll -xml=shippable/testresults/Test-results.xml
-integrations:
-  notifications:
-    - integrationName: slack-notify
-      type: slack
-      recipients:
-        - "#builds"
-      on_success: always
-      on_failure: always
-      on_start: always
-      on_pull_request: always
+# integrations:
+#   notifications:
+#     - integrationName: slack-notify
+#       type: slack
+#       recipients:
+#         - "#builds"
+#       on_success: always
+#       on_failure: always
+#       on_start: always
+#       on_pull_request: always
