debugging junit report conversion

--- a/shippable.yml
+++ b/shippable.yml
@@ -19,14 +19,14 @@ build:
     - unzip NUnit.Console-3.8.0.zip
     - mono nuget.exe install -OutputDirectory packages
     - msbuild falkonry-csharp-client.sln
-    - mono nunit3-console.exe falkonry-csharp-client/bin/Debug/falkonry-csharp-client.dll --result=shippable/testresults/Test-results.xml;transform=nunit3-junit.xslt
+    - mono nunit3-console.exe falkonry-csharp-client/bin/Debug/falkonry-csharp-client.dll --result=testresults.xml;transform=nunit3-junit.xslt
     - ls -l
-    - ls -l shippable/testresults
-    - cat shippable/testresults/Test-results.xml
+    - cp testresults.xml shippable/testresults/
+    - cat shippable/testresults/test-results.xml
   on_failure:
     - ls -l
-    - ls -l shippable/testresults
-    - cat shippable/testresults/Test-results.xml
+    - cp testresults.xml shippable/testresults/
+    - cat shippable/testresults/testresults.xml
 # integrations:
 #   notifications:
 #     - integrationName: slack-notify
