--- a/falkonry-csharp-client/falkonry-csharp-client.csproj
+++ b/falkonry-csharp-client/falkonry-csharp-client.csproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.props" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -7,6 +8,15 @@
     <OutputType>Library</OutputType>
     <RootNamespace>falkonrycsharpclient</RootNamespace>
     <AssemblyName>falkonry-csharp-client</AssemblyName>
+    <PackageId>falkonry_csharp_client</PackageId>
+    <PackageVersion>1.1.1</PackageVersion>
+    <PackageIconUrl>https://camo.githubusercontent.com/f16e1afc5a98eb57dec450f529972c65e49ace2a/68747470733a2f2f6170702e66616c6b6f6e72792e61692f696d672f6c6f676f2e706e67</PackageIconUrl>
+    <NeutralLanguage>en-US</NeutralLanguage>
+    <PackageLicenseUrl>https://github.com/Falkonry/falkonry-csharp-client/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Falkonry/falkonry-csharp-client</PackageProjectUrl>
+    <Title>Falkonry Client</Title>
+    <Description>C# ADK for integrating with Falkonry apis</Description>
+    <Authors>Falkonry Inc</Authors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -113,7 +123,9 @@
     <Compile Include="Tests\TestAddFacts.cs" />
     <Compile Include="Tests\TestGetFacts.cs" />
     <Compile Include="Tests\TestGetDatastreamData.cs" />
-    <Compile Include="Tests\TestGetOutput.cs" />
+    <Compile Include="Tests\TestGetOutput.cs">
+      <IncludeInPackage>false</IncludeInPackage>
+    </Compile>
     <Compile Include="helper\models\FalkonryEvent.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -126,7 +138,9 @@
     <None Include="resources\factData.json" />
     <None Include="resources\factsDataWithTags.json" />
     <None Include="resources\factData.csv" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
+  <Import Project="..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.2.0\build\NuGet.Build.Packaging.targets')" />
 </Project>
