--- a/Falkonry/Falkonry.csproj
+++ b/Falkonry/Falkonry.csproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{23865509-62E4-40DF-95B9-DDFD7EAC6AD7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Falkonry</RootNamespace>
-    <AssemblyName>falkonryclient</AssemblyName>
+    <AssemblyName>Falkonry</AssemblyName>
     <PackageId>Falkonry</PackageId>
-    <PackageVersion>1.1.1</PackageVersion>
+    <PackageVersion>1.1.2</PackageVersion>
     <PackageIconUrl>https://camo.githubusercontent.com/f16e1afc5a98eb57dec450f529972c65e49ace2a/68747470733a2f2f6170702e66616c6b6f6e72792e61692f696d672f6c6f676f2e706e67</PackageIconUrl>
     <NeutralLanguage>en-US</NeutralLanguage>
     <PackageLicenseUrl>https://github.com/Falkonry/falkonry-csharp-client/blob/master/LICENSE</PackageLicenseUrl>
@@ -17,7 +17,7 @@
     <Title>Falkonry Client</Title>
     <Description>C# ADK for integrating with Falkonry's condition prediction APIs</Description>
     <Authors>Falkonry Inc</Authors>
-    <ReleaseVersion>1.1.1</ReleaseVersion>
+    <ReleaseVersion>1.1.2</ReleaseVersion>
     <PackageTags>falkonry</PackageTags>
     <DevelopmentDependency>true</DevelopmentDependency>
     <PackageReleaseNotes>https://github.com/Falkonry/falkonry-csharp-client/releases</PackageReleaseNotes>
