--- a/FalkonryClient/FalkonryClient.csproj
+++ b/FalkonryClient/FalkonryClient.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Tests\TestGetFacts.cs" />
     <Compile Include="Tests\TestGetDatastreamData.cs" />
     <Compile Include="Tests\TestGetOutput.cs" />
+    <Compile Include="Tests\TestLiveAssessment.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tests\" />
